refactured standard backup